@@ -27,8 +27,16 @@ Pyramid project's ``__init__.py``:
    config = Configurator(.....)
    config.include('pyramid_tm')
 
-From now on, whenever a new request is setup from an application using
-``config``, a new transaction is associated with that request.
+Or use the ``pyramid.includes`` configuration setting in your ``.ini`` file:
+
+.. code-block:: ini
+   :linenos:
+
+   [app:myapp]
+   pyramid.includes = pyramid_tm
+
+After the package is included, whenever a new request enters the application,
+a new transaction is associated with that request.
 
 .. note::
 
@@ -49,7 +57,7 @@ are tested:
   2) Did an exception occur in the underlying code? if so,
      ``transaction.abort()``
 
-  3) If the ``pyramid_tm.commit_veto`` configuration setting was used, did
+  3) If the ``tm.commit_veto`` configuration setting was used, did
      the commit veto callback, called with the response generated by the
      application, return a result that evaluates to ``True``? if so,
      ``transaction.abort()``.
@@ -109,7 +117,7 @@ Python:
    from pyramid.config import Configurator
 
    def app(global_conf, settings):
-       settings['pyramid_tm.commit_veto'] = 'pyramid_tm.default_commit_veto'
+       settings['tm.commit_veto'] = 'pyramid_tm.default_commit_veto'
        config = Configurator(settings=settings)
        config.include('pyramid_tm')
 
@@ -119,11 +127,11 @@ Or via PasteDeploy:
    :linenos:
 
    [app:myapp]
-   pyramid_tm.commit_veto = pyramid_tm.default_commit_veto
+   tm.commit_veto = pyramid_tm.default_commit_veto
 
 If you'd like to use a different "commit veto" callback, create a function
 with the same signature (``request``, ``response``) and return value
-(``True`` or ``False``), then pass a ``pyramid_tm.commit_veto`` key/value
+(``True`` or ``False``), then pass a ``tm.commit_veto`` key/value
 pair in your settings which points at the Python dotted name of this commit
 veto.
 
@@ -135,7 +143,7 @@ Via Python:
    from pyramid.config import Configurator
 
    def app(global_conf, settings):
-       settings['pyramid_tm.commit_veto'] = 'my.package.commit_veto'
+       settings['tm.commit_veto'] = 'my.package.commit_veto'
        config = Configurator(settings=settings)
        config.include('pyramid_tm')
 
@@ -145,7 +153,7 @@ Via PasteDeploy:
    :linenos:
 
    [app:myapp]
-   pyramid_tm.commit_veto = my.package.commit_veto
+   tm.commit_veto = my.package.commit_veto
 
 In the PasteDeploy example, the path is a Python dotted name, where the dots
 separate module and package names, and the colon separates a module from its
@@ -162,7 +170,7 @@ attempt to call the downstream handler again with the same request, in effect
 "replaying" the request.
 
 By default, retrying is turned off.  To turn it on, use the
-``pyramid_tm.attempts`` configuration setting.  By default this setting is
+``tm.attempts`` configuration setting.  By default this setting is
 ``1``, meaning only one attempt will be tried, and no retry will happen even
 if a retryable error is raised by the handler.  But if the value, for
 example, is set to ``3``, the following set of events might happen.
